.github/scripts/tests/fixtures/api-impl-006/fail/swift-independent-extension/Sources/Fixture Module/EnvironmentVariables.swift
extension EnvVars {
    var value: String { "value" }
}
